<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Iris</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_free_form">Free Form</string>
    <string name="action_settings">Settings</string>

    <string name="free_form">Free Form</string>
    <string name="clear">Clear</string>
    <string name="lock">Lock</string>
    <string name="locked">Locked</string>
    <string name="color">Color</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="title_devices">Iris BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mario">Mario</string>

    <string name="connecting">Connecting&#46;&#46;&#46;</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="chromecast">Chromecast</string>
    <string name="app_id">3807C026</string>
    <string name="namespace">urn:x-cast:com.jerry.iris</string>

</resources>
