<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_lock"
        android:title="@string/lock"
        android:orderInCategory="1"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_color"
        android:title="@string/color"
        android:orderInCategory="2"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        android:orderInCategory="3"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_mario"
        android:title="@string/menu_mario"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_iris"
        android:title="@string/app_name"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="6"
        android:showAsAction="ifRoom"/>
</menu>